--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="effect">Effect</string>
     <string name="reload">Reload</string>
     <string name="apply">Apply</string>
+    <string name="offset_x">Offset X</string>
+    <string name="offset_y">Offset Y</string>
 </resources>
