--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="apply">Apply</string>
     <string name="offset_x">Offset X</string>
     <string name="offset_y">Offset Y</string>
+    <string name="scale">Scale</string>
 </resources>
